Some core packages added and updated